fix pieces not showing up on load

--- a/src/sass/chess-board.scss
+++ b/src/sass/chess-board.scss
@@ -150,6 +150,17 @@ body {
       // outline-offset: -3px;
       background: #facece;            
     }
+    .enemy-move {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      // border: 1px solid red;
+    }
   }
 }
 
@@ -163,6 +174,9 @@ body {
   justify-content: center;
   align-items: center;
 
+  > svg {
+    flex: 1;
+  }
   // use height becuase width
   // is variable per piece
   .king {
